= New Features =

== 1.22 release (in-progress) == #release-1.22

=== Library ===

==== Major changes ====

==== New classes ====

==== API changes ====

=== Documentation ===

=== Python module ===

=== Miscellaneous ===


== 1.21rc1 release (2023-05-16) == #release-1.21rc1

=== Library ===

==== Major changes ====
 * BoxCoxFactory handles linear model
 * New GEV estimation services: MLE, profiled likelihood, r-maxima, time-varying, return level

==== New classes ====
 * SmolyakExperiment (openturns.experimental)
 * Physical|StandardSpaceCrossEntropyImportanceSampling, CrossEntropyResult (openturns.experimental)
 * LeastSquaresExpansion, IntegrationExpansion (openturns.experimental)
 * UniformOverMesh (openturns.experimental)
 * GeneralizedExtremeValueValidation (openturns.experimental)
 * Coles (openturns.usecases.coles)
 * Linthurst (openturns.usescases.linthurst)

==== API changes ====
 * Deprecated LinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated NonLinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated GaussianLinearCalibration::getCandidate, use getParameterMean
 * Deprecated NonGaussianLinearCalibration::getCandidate, use getParameterMean
 * Removed SequentialStrategy
 * Removed TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient
 * Removed FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int)
 * Removed FunctionalChaosSobolIndices::summary
 * Removed CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
 * Removed Distribution.getStandardMoment
 * Removed deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors
 * Removed FunctionalChaosAlgorithm(Function) ctors
 * Removed MetaModelResult(Function, Function, ...) ctor
 * Removed FunctionalChaosResult.getComposedModel, MetaModelResult.getModel and associated attributes for 1.21
 * Removed FunctionalChaosResult Function ctor