@@ -71,9 +71,6 @@ public:
   /** Model gradient wrt the parameter accessor */
   Matrix getGradientObservations() const;
 
-  /** @deprecated Candidate accessor */
-  Point getCandidate() const;
-
   /** StartingPoint accessor */
   Point getStartingPoint() const;
 
